; ModuleID = '/home/carl/AnghaBench/linux/fs/pstore/extr_pmsg.c_pmsg_devnode.c'
source_filename = "/home/carl/AnghaBench/linux/fs/pstore/extr_pmsg.c_pmsg_devnode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.device*, i32*)* @pmsg_devnode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @pmsg_devnode(%struct.device* %0, i32* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i32*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %2
  %8 = load i32*, i32** %4, align 8
  store i32 144, i32* %8, align 4
  br label %9

9:                                                ; preds = %7, %2
  ret i8* null
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
